[package]
name = "meshopt"
version = "0.1.8"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for mesh optimizer"
homepage = "https://github.com/gwihlidal/meshopt-rs"
repository = "https://github.com/gwihlidal/meshopt-rs"
documentation = "https://docs.rs/meshopt"
readme = "README.md"
keywords = ["mesh", "optimize", "cache", "3d", "rendering"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/src/meshoptimizer.h",
    "vendor/src/clusterizer.cpp",
    "vendor/src/indexcodec.cpp",
    "vendor/src/indexgenerator.cpp",
    "vendor/src/overdrawanalyzer.cpp",
    "vendor/src/overdrawoptimizer.cpp",
    "vendor/src/simplifier.cpp",
    "vendor/src/stripifier.cpp",
    "vendor/src/vcacheanalyzer.cpp",
    "vendor/src/vcacheoptimizer.cpp",
    "vendor/src/vertexcodec.cpp",
    "vendor/src/vfetchanalyzer.cpp",
    "vendor/src/vfetchoptimizer.cpp",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/meshopt-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
float-cmp = "0.5.0"
failure = "0.1.5"

[build-dependencies]
cc = { version = "1.0.37" }

[build-dependencies.bindgen]
version = "0.50.0"
optional = true

[dev-dependencies]
tobj = "0.1.7"
miniz_oxide = "0.2.2"
rand = "0.7.0"
libc = "0.2.59"
structopt = "0.2"
memoffset = "0.5.0"

[dev-dependencies.gltf]
version = "0.12.0"
features = ["extras", "names"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
generate_bindings=["bindgen"]
