[package]
name = "meshopt"
version = "0.6.2"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust ffi bindings and idiomatic wrapper for mesh optimizer"
homepage = "https://github.com/gwihlidal/meshopt-rs"
repository = "https://github.com/gwihlidal/meshopt-rs"
documentation = "https://docs.rs/meshopt"
readme = "README.md"
keywords = ["mesh", "optimize", "cache", "3d", "rendering"]
categories = ["rendering", "rendering::engine"]
license = "MIT OR Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/src/meshoptimizer.h",
    "vendor/src/allocator.cpp",
    "vendor/src/clusterizer.cpp",
    "vendor/src/indexanalyzer.cpp",
    "vendor/src/indexcodec.cpp",
    "vendor/src/indexgenerator.cpp",
    "vendor/src/overdrawoptimizer.cpp",
    "vendor/src/partition.cpp",
    "vendor/src/quantization.cpp",
    "vendor/src/rasterizer.cpp",
    "vendor/src/simplifier.cpp",
    "vendor/src/spatialorder.cpp",
    "vendor/src/stripifier.cpp",
    "vendor/src/vcacheoptimizer.cpp",
    "vendor/src/vertexcodec.cpp",
    "vendor/src/vertexfilter.cpp",
    "vendor/src/vfetchoptimizer.cpp",
    "include_wasm32/*.h",
]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
float-cmp = "0.10"
thiserror = "2.0"
bitflags = "2.4"

[build-dependencies]
cc = { version = "1.0" }

[build-dependencies.bindgen]
version = "0.72.0"
optional = true

[dev-dependencies]
tobj = "4.0"
miniz_oxide = "0.8"
rand = "0.9"
structopt = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
generate_bindings = ["bindgen"]
